config/old/podzone-docs.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: docs-service
spec:
  selector:
    app: docs
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docs
  labels:
    app: docs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docs
  template:
    metadata:
      labels:
        app: docs
    spec:
      volumes:
      - name: doc-root-volume
        persistentVolumeClaim:
          claimName: docs-volume-claim
      containers:
      - name: docs
        image: ubuntu/apache2
        ports:
        - containerPort: 80
        volumeMounts: 
        - name: doc-root-volume
          mountPath: /var/www/html
