config/old/IngressHTTP.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: podzone-non-secure-ingress
spec:
  ingressClassName: public
  rules:
  - host: musings.thruhere.net
    http:
      paths:
      - backend:
         service:
           name: apache-service
           port:
             number: 80
        path: /
        pathType: Prefix
