config/old/podzone-docs-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: podzone-docs-ingress
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt
spec:
  ingressClassName: podzone-ingress-class
  tls:
  - hosts:
    - docs.southern.podzone.net
    secretName: docs-cert
  rules:
  - host: docs.southern.podzone.net
    http:
      paths:
      - backend:
         service:
           name: docs-service
           port:
             number: 80
        path: /
        pathType: Prefix
